name:                async-combinators
version:             0.1.0
synopsis:            Async combinators
description:         Async combinators
homepage:            https://github.com/serokell/async-combinators
bug-reports:         https://github.com/serokell/async-combinators/issues
license:             MPL-2.0
license-file:        LICENSE
author:              @serokell
maintainer:          Serokell <hi@serokell.io>
copyright:           2018 Serokell
category:            Concurrency
build-type:          Simple
extra-source-files:  CHANGELOG.md
                   , README.md

cabal-version:       >=1.10
tested-with:         GHC == 8.0.2

library
  hs-source-dirs:      src
  exposed-modules:     Async.Combinators
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && <5
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

test-suite async-combinators-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  build-depends:       base >= 4.7 && <5
                     , async-combinators
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
